--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -68,7 +68,7 @@
         transform: none;
     }
 }
-@media (max-width: 380px) {
+@media (max-width: 420px) {
     .nav-brand {
         font-size: 0.8rem;
     }
